[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/lobby.gd" type="Script" id=1]
[ext_resource path="res://meta objects/buttons.tscn" type="PackedScene" id=2]
[ext_resource path="res://meta objects/Button.tscn" type="PackedScene" id=3]

[node name="lobby" type="Node2D"]
script = ExtResource( 1 )

[node name="buttons" parent="." instance=ExtResource( 2 )]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1020.0
margin_bottom = 600.0
custom_constants/separation = 48
alignment = 1

[node name="buttonHost" parent="buttons" instance=ExtResource( 3 )]
margin_left = 0.0
margin_top = 174.0
margin_right = 1020.0
margin_bottom = 226.0
text = "Host"

[node name="buttonJoin" parent="buttons" instance=ExtResource( 3 )]
margin_left = 0.0
margin_top = 274.0
margin_right = 1020.0
margin_bottom = 326.0
text = "Join"

[node name="back" parent="buttons" instance=ExtResource( 3 )]
margin_left = 0.0
margin_top = 374.0
margin_right = 1020.0
margin_bottom = 426.0
text = "Back"

[connection signal="pressed" from="buttons/buttonHost" to="." method="_on_buttonHost_pressed"]
[connection signal="pressed" from="buttons/buttonJoin" to="." method="_on_buttonJoin_pressed"]
[connection signal="pressed" from="buttons/back" to="." method="_on_back_pressed"]
